[package]
name = "secure-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime (essential for networking)
tokio = { version = "1.35", features = ["full"] }

# HTTP client/server library
hyper = { version = "0.14", features = ["full"] }

# Command-line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration file handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# For future HTTPS tunneling
native-tls = "0.2"  # or rustls = "0.21"
base64 = "0.22.1"
